add packaging information

--- a/src/OpenAPI.ParameterStyleParsers/OpenAPI.ParameterStyleParsers.csproj
+++ b/src/OpenAPI.ParameterStyleParsers/OpenAPI.ParameterStyleParsers.csproj
@@ -5,10 +5,27 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageReleaseNotes>$([System.IO.File]::ReadAllText('$(MSBuildStartupDirectory)/release_notes.txt'))</PackageReleaseNotes>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageId>ParameterStyleParsers.OpenAPI</PackageId>
+		<PackageVersion></PackageVersion>
+		<Authors>Fredrik Arvidsson</Authors>
+		<Company>FKAN Consulting AB</Company>
+		<PackageTags>OpenAPI Parameter Style Parser</PackageTags>
+		<Description>Parses and formats OpenAPI parameters according to the defined style</Description>
+		<RepositoryUrl>https://github.com/Fresa/OpenAPI.ParameterStyleParsers</RepositoryUrl>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<Copyright>Copyright © 2024 Fredrik Arvidsson</Copyright>
+		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="JsonSchema.Net" Version="5.4.2" />
+		<PackageReference Include="JsonSchema.Net" Version="[5.0.0, 6.0)" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,5 +36,10 @@
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
 			<_Parameter1>OpenAPI.ParameterStyleParsers.UnitTests</_Parameter1>
 		</AssemblyAttribute>
+	</ItemGroup>
+	
+	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
 	</ItemGroup>
 </Project>
