ci: use next pre-release of release workflow which should solve a 403 redirect problem with one if it's steps

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,11 +40,12 @@ jobs:
 
   release:
     name: Create Release
-    uses: Fresa/Library.Net.ContinuousDelivery/.github/workflows/release.yml@v0
+    uses: Fresa/Library.Net.ContinuousDelivery/.github/workflows/release.yml@v0.2.1-pre-cd7354d1
     needs: test
     if: github.repository == needs.test.outputs.repository && github.actor != 'dependabot[bot]'
     permissions: 
       contents: write
+      
     with:
       project_path: ${{ needs.test.outputs.project_path }}
       project_name: ${{ needs.test.outputs.project_name }}
