--- a/src/OpenAPI.ParameterStyleParsers/OpenAPI.ParameterStyleParsers.csproj
+++ b/src/OpenAPI.ParameterStyleParsers/OpenAPI.ParameterStyleParsers.csproj
@@ -25,6 +25,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
