--- a/tests/OpenAPI.ParameterStyleParsers.UnitTests/OpenAPI.ParameterStyleParsers.UnitTests.csproj
+++ b/tests/OpenAPI.ParameterStyleParsers.UnitTests/OpenAPI.ParameterStyleParsers.UnitTests.csproj
@@ -10,9 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="FluentAssertions" Version="6.11.0" />
+	<PackageReference Include="AwesomeAssertions" Version="9.1.0" />
     <PackageReference Include="JsonPointer.Net" Version="3.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="Socolin.TestUtils.JsonComparer" Version="1.16.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
